Backend za fazu 1 zavrsen (+dodani logovi za debug)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 spring.application.name=Warehouse
-spring.datasource.url=jdbc:postgresql://localhost:5432/warehouse
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/warehouseDB
 spring.datasource.username=postgres
-spring.datasource.password=lozinka
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+logging.file.name=logs/application.log
+logging.level.org.springframework=DEBUG
+logging.level.root=INFO
+logging.level.com.backend=DEBUG
