Dodan Docker i nginx

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=Warehouse
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/warehouseDB
+spring.datasource.url=jdbc:postgresql://postgres:5432/warehouseDB
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=none
