Dodana Supabase baza na cloudu i maknut postgres servis, promjene na backendu i testirani api sa Postmanom

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,7 +9,9 @@ server {
 
     # Proxy za Backend - Products
     location /products/ {
-        proxy_pass http://backend:8080;
+    # Ovdje provjeravamo da li putanja ima ID, i samo u tom slučaju koristimo rewrite
+        rewrite ^/products/(\d+)$ /products/$1 break;
+        proxy_pass http://backend:8080/products;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -18,7 +20,18 @@ server {
 
     # Proxy za Backend - Warehouses
     location /warehouses/ {
-        proxy_pass http://backend:8080;
+        # Ovdje provjeravamo da li putanja ima ID, i samo u tom slučaju koristimo rewrite
+        rewrite ^/warehouses/(\d+)$ /warehouses/$1 break;
+        proxy_pass http://backend:8080/warehouses;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Zahtjev za /products/warehouse/{warehouseId}
+    location ~ ^/products/warehouse/(\d+)$ {
+        proxy_pass http://backend:8080/products/warehouse/$1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
