--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,14 @@
 services:
-  postgres:
-    image: postgres:13
-    environment:
-      POSTGRES_DB: warehouseDB
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-    ports:
-      - "5432:5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-
   backend:
     build: .
-    depends_on:
-      - postgres
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/warehouse_db
+      SPRING_DATASOURCE_URL: jdbc:postgresql://aws-0-eu-central-2.pooler.supabase.com:5432/postgres?user=postgres.ltnadadrqhwenjlzdvqc&password=password
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: password
     expose:
       - "8080"
+    networks:
+      - warehouse-network
 
   frontend:
     build: ./frontend
@@ -27,8 +16,8 @@ services:
       - backend
     volumes:
       - frontend-build:/usr/share/nginx/html
-    ports:
-      - "8080:80"
+    networks:
+      - warehouse-network
 
   nginx:
     image: nginx:alpine
@@ -36,11 +25,16 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - frontend-build:/usr/share/nginx/html
     ports:
-      - "8081:80"
+      - "8080:80"
     depends_on:
       - frontend
       - backend
+    networks:
+      - warehouse-network
 
 volumes:
-  pgdata:
   frontend-build: {}
+
+networks:
+  warehouse-network:
+    driver: bridge
