--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,9 +9,16 @@ server {
 
     # Proxy za Backend - Products
     location /products/ {
-    # Ovdje provjeravamo da li putanja ima ID, i samo u tom slučaju koristimo rewrite
-        rewrite ^/products/(\d+)$ /products/$1 break;
         proxy_pass http://backend:8080/products;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Zahtjev za /productCode PUT i DELETE
+    location ~ ^/products/([0-9][0-9][0-9][0-9][0-9][0-9])$ {
+        proxy_pass http://backend:8080/products/$1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
