Dodan GET /{productCode}

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -16,7 +16,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Zahtjev za /productCode PUT i DELETE
+    # Zahtjev za /productCode GET, PUT i DELETE
     location ~ ^/products/([0-9][0-9][0-9][0-9][0-9][0-9])$ {
         proxy_pass http://backend:8080/products/$1;
         proxy_set_header Host $host;
