--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,6 +9,12 @@ RUN yarn run build
 
 # Serve frontend with NGINX
 FROM nginx:alpine
+
+# Kopiraj NGINX konfiguraciju
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+
+# Kopiraj buildane datoteke iz prethodnog stage-a
 COPY --from=build-stage /app/dist /usr/share/nginx/html
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
