--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -48,4 +48,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    error_page 404 /index.html;
+
 }
