Kopiran nginx sa vue brancha

--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,7 +1,3 @@
-upstream backend_servers {
-    server backend:8080;
-}
-
 server {
     listen 80;
 
@@ -11,6 +7,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # PRODUCTS
     # Proxy za Backend - Products
     location /products/ {
         proxy_pass http://backend:8080/products;
@@ -29,6 +26,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # WAREHOUSES
     # Proxy za Backend - Warehouses
     location /warehouses/ {
         # Ovdje provjeravamo da li putanja ima ID, i samo u tom slučaju koristimo rewrite
@@ -49,6 +47,52 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    error_page 404 /index.html;
+    # ORDERS
+    # Proxy za Backend - Orders
+        location /orders/ {
+            proxy_pass http://backend:8080/orders;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
+    # Proxy za Backend - Orders - Novospecificirani /orders/warehouse/{warehouseId} zahtjevi
+    location /orders/warehouse/ {
+        proxy_pass http://backend:8080/orders/warehouse/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Zahtjev za potvrdu narudžbe
+    location ~ ^/orders/(\d+)/confirm$ {
+        proxy_pass http://backend:8080/orders/$1/confirm;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Zahtjev za otkazivanje narudžbe
+    location ~ ^/orders/(\d+)/cancel$ {
+        proxy_pass http://backend:8080/orders/$1/cancel;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Zahtjev za ponovnu narudžbu
+    location ~ ^/orders/(\d+)/reorder$ {
+        proxy_pass http://backend:8080/orders/$1/reorder;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Error page
+    error_page 404 /index.html;
 }
